<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/notes_list_fragment__toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/half_padding">

        <EditText
            android:id="@+id/note_list_fragment__title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/note_list_fragment__notes_text_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/note_list_fragment__save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_700"
            android:text="@string/save_button_text"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/note_list_fragment__delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_700"
            android:text="@string/delete_button_text"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/black_color_image_view"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_margin="@dimen/half_margin"
            android:background="@color/black" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/blue_color_image_view"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_margin="@dimen/half_margin"
            android:background="@color/purple_700" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/white_color_image_view"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_margin="@dimen/half_margin"
            android:background="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/green_color_image_view"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_margin="@dimen/half_margin"
            android:background="@color/teal_700" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/orange_color_image_view"
            android:layout_width="@dimen/color_box_size"
            android:layout_height="@dimen/color_box_size"
            android:layout_margin="@dimen/half_margin"
            android:background="@color/orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/notes_list_fragment__color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_color"/>
    </LinearLayout>

</LinearLayout>